# msgpack-rust

./: .drone.yml  Cargo.toml
.github/: pull.yml
rmp/: Cargo.toml
rmp-serde/: Cargo.toml
rmp-serde/src/: decode.rs  encode.rs  lib.rs
rmp/src/: lib.rs
rmpv/: Cargo.toml
rmpv/src/: lib.rs
rmpv/src/decode/: value.rs  value_ref.rs
rmpv/src/encode/: value.rs  value_ref.rs
