[package]
name = "rmp-serde"
version = "0.15.0"
authors = ["Evgeny Safronov <division494@gmail.com>"]
license = "MIT"
description = "Serde bindings for RMP"
repository = "https://github.com/3Hren/msgpack-rust"
documentation = "https://docs.rs/rmp-serde"
readme = "../README.md"
keywords = ["msgpack", "MessagePack", "serde", "serialization"]
categories = ["encoding"]
edition = "2018"

[dependencies]
byteorder = { git = "https://github.com/mesalock-linux/byteorder-sgx" }
serde = { git = "https://github.com/mesalock-linux/serde-sgx" }
rmp = { version = "0.8.8", path = "../rmp" }
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk", optional = true }

[features]
default = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]

[dev-dependencies]
#rmpv = { path = "../rmpv" }
#serde_bytes = "0.11.2"
#serde_derive = "1.0.116"

[badges]
maintenance = { status = "passively-maintained" }
