[package]
name = "rmpv"
version = "0.4.5"
authors = ["Evgeny Safronov <division494@gmail.com>"]
license = "MIT"
description = "Value variant for RMP"
repository = "https://github.com/3Hren/msgpack-rust"
documentation = "https://docs.rs/rmpv"
readme = "../README.md"
keywords = ["msgpack", "MessagePack", "serialization"]
categories = ["encoding"]
edition = "2018"

[features]
with-serde = ["serde", "serde_bytes"]
mesalock_sgx = ["sgx_tstd"]
default = ["mesalock_sgx"]

[dependencies]
serde_bytes = { git = "https://github.com/mesalock-linux/serde-bytes-sgx", optional = true }
rmp = { version = "0.8.8", path = "../rmp" }
num-traits = { git = "https://github.com/mesalock-linux/num-traits-sgx" }
serde = { git = "https://github.com/mesalock-linux/serde-sgx", optional = true }
sgx_tstd = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[dev-dependencies]
quickcheck = "0.9"
